--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npx webpack"
+        "build": "npx webpack",
+        "dist": "npx webpack --config webpack.product.config.js"
     },
     "repository": {
         "type": "git",
@@ -19,10 +20,18 @@
     },
     "homepage": "https://github.com/Hoson09/George_webpackStudy#readme",
     "devDependencies": {
+        "autoprefixer": "^9.6.1",
+        "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.2.0",
+        "file-loader": "^4.2.0",
+        "html-webpack-plugin": "^3.2.0",
+        "image-webpack-loader": "^5.0.0",
+        "mini-css-extract-plugin": "^0.8.0",
         "node-sass": "^4.12.0",
+        "postcss-loader": "^3.0.0",
         "sass-loader": "^7.2.0",
         "style-loader": "^1.0.0",
+        "url-loader": "^2.1.0",
         "webpack": "^4.39.2",
         "webpack-cli": "^3.3.7"
     },
