--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-    "name": "George_webpackStudy",
+    "name": "ss",
     "version": "1.0.0",
     "description": "> 这是我自己的学习笔记，可能不是非常正确。如果对您造成困扰,我很抱歉。",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npx webpack",
-        "dist": "npx webpack --config webpack.product.config.js"
+        "build": "npx webpack --config webpack.dev.js",
+        "watch": "npx webpack --watch --config webpack.dev.js",
+        "dist": "npx webpack --config webpack.prod.js",
+        "start": "npx webpack-dev-server --config webpack.dev.js"
     },
     "repository": {
         "type": "git",
@@ -20,22 +22,41 @@
     },
     "homepage": "https://github.com/Hoson09/George_webpackStudy#readme",
     "devDependencies": {
+        "@babel/cli": "^7.5.5",
+        "@babel/core": "^7.5.5",
+        "@babel/plugin-transform-runtime": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
         "autoprefixer": "^9.6.1",
+        "babel-eslint": "^10.0.2",
+        "babel-loader": "^8.0.6",
+        "babel-plugin-transform-runtime": "^6.23.0",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.2.0",
+        "eslint": "^6.2.0",
+        "eslint-loader": "^2.2.1",
         "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
         "image-webpack-loader": "^5.0.0",
         "mini-css-extract-plugin": "^0.8.0",
         "node-sass": "^4.12.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
         "postcss-loader": "^3.0.0",
         "sass-loader": "^7.2.0",
+        "standard": "^14.0.0",
         "style-loader": "^1.0.0",
+        "uglifyjs-webpack-plugin": "^2.2.0",
         "url-loader": "^2.1.0",
         "webpack": "^4.39.2",
-        "webpack-cli": "^3.3.7"
+        "webpack-bundle-analyzer": "^3.4.1",
+        "webpack-cli": "^3.3.7",
+        "webpack-dev-server": "^3.8.0",
+        "webpack-merge": "^4.2.1"
     },
     "dependencies": {
+        "@babel/polyfill": "^7.4.4",
+        "@babel/runtime": "^7.5.5",
+        "axios": "^0.19.0",
+        "babel-runtime": "^6.26.0",
         "lodash": "^4.17.15"
     }
 }
